--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,15 @@ greenlet==3.1.1
 gunicorn==23.0.0
 idna==3.10
 mysqlclient==2.2.7
+numpy==2.2.4
 packaging==24.2
+pandas==2.2.3
 pycparser==2.22
 PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
 requests==2.32.3
+six==1.17.0
 SQLAlchemy==2.0.40
 sqlparse==0.5.3
 typing_extensions==4.13.0
